fix(pr-view): Re-align event text with icons and add extra TODO

--- a/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/_components/TimelineDisplay/TimelineDisplay.module.css
+++ b/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/_components/TimelineDisplay/TimelineDisplay.module.css
@@ -17,6 +17,7 @@
 
 .eventSmall {
   display: flex;
+  align-items: center;
   gap: var(--spacer-24);
   color: var(--text-secondary);
 }
